# structure-prompt-adapter

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
configs/: cache.yaml  eval.yaml  infer.yaml  splits.yaml  train.yaml
configs/data/: cddb.yaml  toy.yaml
configs/eval/: default.yaml  enzyme_tier0.yaml  enzyme_tier0_shapeA.yaml  manifest_b1_full.yaml  manifest_b4.yaml  manifest_curated15.yaml  manifest_lambda_sweep.yaml
configs/hardware/: cloud_h100.yaml  local_a5000.yaml
configs/model/: spa.yaml
configs/of3/: of3_nokernel.yml  of3_triton.yml
configs/paths/: default.yaml
configs/train/: default.yaml
configs/variant/: A_1_by_32.yaml  B_1_by_1536.yaml  C_n_by_1536.yaml
docker/: Dockerfile  Dockerfile.combined  Dockerfile.of3  build_and_push.sh  build_and_push_combined.sh  build_and_push_of3.sh  constraints.txt
models/: README.md
scripts/: build_splits.py  gen_esm3_cache.py  profile_step.py  train.py
scripts/cloud/: load_cache.sh  poll_job.sh  run_8siu_hardsoft.sh  run_b4_hardsoft.sh  run_cache_gen.sh  run_calib.sh  run_eval.sh  run_of3_batch_bench.sh  run_scaffold_eval.sh  run_smoke.sh  run_threeway_sweep.sh  run_train.sh  run_twosteer_designability.sh  (+6 more)
tests/: test_augment.py  test_conditions.py  test_cross_attention.py  test_dataset.py  test_esm3_prompt.py  test_eval_contig.py  test_eval_flywheel.py  test_eval_generate.py  test_eval_ladder.py  test_eval_openfold3.py  test_eval_proteinmpnn.py  test_eval_score.py  test_eval_subregion.py  test_granularity.py  test_harness.py  test_identity_at_init.py  test_scaffold.py  test_splits.py  test_train_loop.py  test_wrapper_loader.py
(+77 files in other folders)
