[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structure-prompt-adapter"
version = "0.0.1.dev0"
description = "Structure Prompt Adapter (SPA): parameter-efficient decoupled cross-attention sidecar for RFdiffusion3, conditioned on ESM3 structural prompts."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Gregg Helt" }]

# NOTE on dependencies — deliberately minimal.
# The heavy stack (torch 2.5.1+cu124, rc-foundry[rfd3], atomworks, esm, clss-model)
# is provided by the `spa-dev` conda env as EDITABLE installs from ../needed_repos/,
# pinned during Task 0 / Task 1.5. Listing them here would let `pip install -e .`
# try to resolve/upgrade them and disturb that carefully-pinned, GPU-validated stack.
# So they are intentionally NOT pinned in this file. See CLAUDE.md → Environments.
dependencies = [
  "hydra-core>=1.3",
  "omegaconf>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
# Experiment tracker is an open decision (dev 07 W5.4) — install on demand, not by default.
tracking = ["wandb"]
# Validation-flywheel scoring (stage 4): TM-score adherence via tmtools (a TMalign wrapper).
# biotite (Cα RMSD) is already provided by the spa-dev stack (atomworks), so it is not re-listed.
eval = ["tmtools"]

[project.urls]
Homepage = "https://github.com/GreggHelt2/structure-prompt-adapter"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
